<resources>
    <string name="app_name">AlquiLab</string>
    <string name="title_login">AlquiLab</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="title_forgotPass">¿Olvidó la contraseña?</string>
    <string name="title_register">Registrarse</string>
    <string name="hint_fullname">Nombre</string>
    <string name="btn_register">Crear cuenta</string>
    <string name="btn_reset">Cambiar contraseña</string>
    <string name="hint_numberContact">Número de contacto</string>

    <!-- GroupRoles-->
    <string name="title_Role">¿Qué busca hacer?</string>
    <string name="radioButtonLocador">Colocar alquiler</string>
    <string name="radioButtonInquilino">Buscar alquiler</string>

    <string name="titleRol_toolbar">AlquiLab</string>

    <string name="btnRole">Elegir</string>


    <string name="edit_alq">Editar Alquiler</string>
    <string name="btn_saveE">Guardar</string>
    <string name="spinnerEstado">Estado</string>


    <!-- Spinner -->
    <string name="spinnerRol">Rol</string>
    <string-array name="OpcionesRol">
        <item>Seleccione una opcion</item>
        <item>Buscar alquiler</item>
        <item>Ofrecer alquiler</item>
    </string-array>


    <string-array name="OpcionesEstado">
        <item>Disponible</item>
        <item>Alquilado</item>
        <item>Pausado</item>
    </string-array>

    <string name="opc0">Disponible</string>
    <string name="opc1">Alquilado</string>
    <string name="opc2">Pausado</string>


    <!-- Nuevo Alquiler -->
    <string name="title_alquileroferta_list">AlquilerOfertas</string>
    <string name="title_alquileroferta_detail">AlquilerOferta Detail</string>
    <string name="title_new">Nuevo Alquiler</string>
    <string name="description">Ingrese una descripcion</string>
    <string name="btn_add">Agregar Alquiler</string>
    <string name="hint_address">Ingrese la direccion</string>
    <string name="btn_img">Subir Foto</string>

    <!-- Menu -->
    <string name="logOut">Logout</string>
    <string name="settings">Settings</string>

    <string name="toolbartitledetail">Detalles</string>

    <string name="textLanguajes">Idioma de la aplicación</string>

    <string name="hintSearch">Buscar…</string>

    <string name="titleBtnSearch">Buscar</string>

    <string name="new_add_nombre">Nombre:</string>
    <string name="new_add_direccion">Dirección:</string>
    <string name="new_add_descripcion">Descripción:</string>
    <string name="new_add_habitaciones">N° Habitaciones:</string>
    <string name="new_add_barrio">Barrio:</string>
    <string name="new_add_precio">Precio mensual:</string>

    <string name="symbolPrice">$</string>
    <string name="detailUbicacion">Ubicación</string>
    <string name="detailImagenes">Imágenes</string>

    <string name="nombre">Nombre</string>
    <string name="title_direccion">Dirección</string>
    <string name="title_descripcion">Descripción</string>
    <string name="title_habitaciones">N° Habitaciones</string>
    <string name="title_barrio">Barrio</string>
    <string name="title_precio">Precio mensual</string>
    <string name="title_imagen">Imagen</string>
    <string name="title_location">Localización</string>

    <!-- Validaciones -->
    <string name="errorEmail">Ingrese un correo electronico!</string>
    <string name="errorEmailValid">Ingrese un correo electrónico valido!</string>
    <string name="errorPassword">Ingrese un correo electrónico válido!</string>
    <string name="errorPasswordValid">La contraseña debe contener mas de 6 caracteres!</string>
    <string name="errorName">Ingrese un nombre!</string>
    <string name="errorNumber">Ingrese un número!</string>
    <string name="errorNumberValid">Tiene que contener más de 8 números!</string>
    <string name="errorDescript">Ingrese una descripción!</string>
    <string name="errorAdress">Ingrese una dirección!</string>
    <string name="errorBarrio">Ingrese un barrio!</string>
    <string name="errorRooms">Ingrese una cantidad de habitaciones!</string>
    <string name="errorPrice">Ingrese un precio!</string>

    <string name="ToastLogin">Error al iniciar sesion!, Por favor verifique sus datos!</string>
    <string name="ToastForgot">Verifique su correo electrónico!</string>
    <string name="ToastErrorForgot">Se ha producido un error! Inténtelo de nuevo!</string>

    <string name="ToastRegister">Has sido registrado satisfactoriamente!</string>
    <string name="ToastRegisterError">Se ha producido un error al registrarse! Intentelo de nuevo!</string>
    <string name="ToastRegisterExistent">Usuario registrado anteriormente!</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="btn_map">Añadir Localización</string>
    <string name="btn_save">Confirmar ubicacion</string>

    <string name="AlertTitle">Borrar alquiler</string>
    <string name="AlertMessage">¿Desea borrar el alquiler?</string>
    <string name="AlertDeleteYes">Si</string>
    <string name="AlertDeleteNo">No</string>

    <string name="detail_btn_delete">Borrar</string>
    <string name="detail_btn_edit">Editar</string>

    <string name="ToastSelectRole">Seleccione un rol</string>
    <string name="ToastPropietario">Usted no es propietario</string>
    
    <string name="RequierePermisos">Requiere permisos</string>
    <string name="TextDescargaCompletada">Se guardó exitosamente</string>
    <string name="TitleAlertDescarga">Descargar imagen</string>
    <string name="TextAlertDescarga">¿Desea descargar la imagen?</string>
    <string name="TitleDescargaNotificacion">Descarga de imagen</string>
    <string name="TextNotificacion">Se ha descargado la imagen!</string>
    <string name="toolbartitleNewRent">Nuevo Alquiler</string>

    <string name="Searchempty">No se encontró</string>

    <string name="firstMap">Primero el mapa!!</string>
    <string name="loadImage">Cargar imagen!!</string>

    <string name="AddRent">Alquiler agregado!!</string>
    <string name="AddLoadImage">Debe cargar una imagen!!</string>

    <string name="listVacia">Aún no registró ninguna propiedad! \n Agregue una!</string>
    <string name="selectIdioma">Seleccione un idioma</string>
    <string name="idiomaES">Español</string>
    <string name="idiomaEN">Inglés</string>
    <string name="idiomaFR">Francés</string>



    <string name="listVacia">No tiene ninguna propiedad! \n Agregue uno!</string>
    <string name="selectIdioma">Seleccione un idioma</string>
    <string name="idiomaES">Español</string>
    <string name="idiomaEN">Inglés</string>
    <string name="idiomaFR">Francés</string>

</resources>