<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/nameRegister"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_fullname"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textSize="24sp"
        android:layout_below="@+id/emailRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="15dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_below="@+id/passwordRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="31dp"
        android:backgroundTint="@color/btn_login"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titleRole"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordRegister"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="32dp"
        android:text="@string/spinnerRol"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerRol"
        android:layout_width="268dp"
        android:layout_height="54dp"
        android:layout_below="@+id/passwordRegister"
        android:layout_marginStart="13dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/titleRole" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>