<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/edit_alq"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edit_nom"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="169dp" />

    <EditText
        android:id="@+id/edit_des"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_nom"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="169dp" />

    <TextView
        android:id="@+id/titleEstado"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_des"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/spinnerEstado"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerEst"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:layout_below="@+id/edit_des"
        android:layout_marginStart="23dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/titleEstado" />

    <Button
        android:id="@+id/btn_sav"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_below="@+id/spinnerEst"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/btn_login"
        android:text="@string/btn_saveE"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>