<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/fondo_login_4">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="169dp" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="257dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_below="@+id/passwordLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/btn_login"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_forgotPass"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginStart="37dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/forgotPassword"
        android:text="@string/title_register"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>
</ScrollView>