<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@drawable/fondo_app_negro">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/emailReset"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="169dp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_below="@+id/emailReset"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/btn_login"
        android:text="@string/btn_reset"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnReset"
        android:layout_alignParentStart="true"
        android:layout_marginStart="181dp"
        android:layout_marginTop="47dp"
        android:visibility="gone"/>

</RelativeLayout>