<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/fondo_app_negro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar1"/>

        <TextView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="2dp"
            android:fontFamily="serif"
            android:text="@string/title_new"
            android:textAlignment="center"
            android:textColor="#0D872C"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/banner"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="serif"
            android:text="@string/nombre"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/edit_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/banner"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/labelName"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textMultiLine"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:typeface="normal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="169dp" />

        <TextView
            android:id="@+id/labelDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_nom"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="36dp"
            android:fontFamily="serif"
            android:text="@string/new_add_descripcion"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/edit_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_nom"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp"
            android:layout_toEndOf="@+id/labelDesc"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:typeface="normal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="169dp" />

        <TextView
            android:id="@+id/labelDirecc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_des"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:fontFamily="serif"
            android:text="@string/new_add_direccion"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal"/>

        <EditText
            android:id="@+id/edit_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_des"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/labelDirecc"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textMultiLine"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:typeface="normal"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="257dp" />

        <TextView
            android:id="@+id/labelBarrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_dir"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:fontFamily="serif"
            android:text="@string/new_add_barrio"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/edit_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_dir"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/labelBarrio"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textMultiLine"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:typeface="normal"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="257dp" />

        <TextView
            android:id="@+id/labelHabitaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_bar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="36dp"
            android:fontFamily="serif"
            android:text="@string/new_add_habitaciones"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/edit_hab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_bar"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/labelHabitaciones"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:typeface="normal"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="257dp" />

        <TextView
            android:id="@+id/labelPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_hab"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="36dp"
            android:fontFamily="serif"
            android:text="@string/new_add_precio"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/edit_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_hab"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/labelPrecio"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:typeface="normal"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="257dp" />


        <TextView
            android:id="@+id/btn_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_pre"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="14dp"
            android:backgroundTint="@color/btn_map"
            android:drawableStart="@drawable/ic__add_location_2"
            android:fontFamily="serif"
            android:text="@string/btn_map"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/view_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/btn_map"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="21dp"
            app:srcCompat="@drawable/ic_image"/>

        <TextView
            android:id="@+id/add_image_alquiler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_map"
            android:layout_marginStart="7dp"
            android:layout_marginTop="27dp"
            android:layout_toEndOf="@+id/view_img"
            android:fontFamily="serif"
            android:text="@string/title_imagen"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_below="@+id/view_img"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="14dp"
            android:backgroundTint="@color/btn_login"
            android:fontFamily="sans-serif"
            android:text="@string/btn_add"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>